--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -2,16 +2,12 @@
   <h1>Crear un nuevo usuario</h1>
   <form class="mt-3" method="post">
     <div class="mb-3">
-      <label for="username" class="form-label">Nombre de usuario</label>
-      <input type="text" class="form-control" id="username" name="username">
+      <label for="nombre" class="form-label">Nombre</label>
+      <input type="text" class="form-control" id="nombre" name="nombre">
     </div>
     <div class="mb-3">
-      <label for="email" class="form-label">Correo electrónico</label>
-      <input type="email" class="form-control" id="email" name="email">
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Contraseña</label>
-      <input type="password" class="form-control" id="password" name="password">
+      <label for="descripcion" class="form-label">Descripción</label>
+      <input type="text" class="form-control" id="descripcion" name="descripcion">
     </div>
     <button type="submit" class="btn btn-primary">Enviar</button>
     <a href="/" class="btn btn-secondary">Cancelar</a>
