--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -1,5 +1,5 @@
 <div class="container p-5 text-center">
-  <h1>¿Estas seguro de eliminar el usuario <strong>{{user.username}}</strong>?</h1>
+  <h1>¿Estas seguro de eliminar el usuario <strong>{{user.nombre}}</strong>?</h1>
   <a href="?confirmado=1" class="btn btn-danger">Confirmar</a>
   <a href="/" class="btn btn-secondary">Cancelar</a>
 </div>
