--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,24 +3,22 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Usuario</th>
-          <th scope="col">Email</th>
-          <th scope="col">Fecha</th>
-          <th scope="col">Acción</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Descripción</th>
         </tr>
       </thead>
       <tbody>
         {{#each users}}
         <tr>
-          <td>{{this.username}}</td>
-          <td>{{this.email}}</td>
+          <td>{{this.nombre}}</td>
+          <td>{{this.descripcion}}</td>
           <td>{{formatear "fecha" this.created_at}}</td>
-          <td><a href="/user-delete/{{this.id}}" class="btn btn-danger">Eliminar</a></td>
+          <td><a href="/todo-delete/{{this.id}}" class="btn btn-danger">Eliminar</a></td>
         </tr>
         {{/each}}
       </tbody>
     </table>
   </div>
 
-  <a href="/user-create" class="btn btn-primary mt-2">Crear</a>
+  <a href="/todo-create" class="btn btn-primary mt-2">Crear</a>
 </div>
